<?xml version="1.0"?>
<package>
  <name>wifi_prediction</name>
  <version>0.1.0</version>
  <description>
    Package to predict wifi coverage on the map, together with a modified Stage simulator.
  </description>

  <maintainer email="office@taurob.com">taurob GmbH</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
